finished the card beside the details  list

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
           <li>certification of complete</li>
         </ul>
       </div>
-      <div><a>join now</a></div>
+      <div class="button-container">
+        <a class="button" href="#">join now</a>
+      </div>
     </div>
   </body>
 </html>
