add transform to the card container

--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
       <p class="price-info">
         recuring payment on monthly basis - cancel anytime!
       </p>
-      <div>
-        <ul>
-          <li>40 course</li>
-          <li>download resource</li>
-          <li>certification of complete</li>
-        </ul>
+      <div class="details-container">
+        <div class="details">40 course</div>
+        <div class="details">download resource</div>
+        <div class="details">certification of complete</div>
       </div>
       <div class="button-container">
         <a class="button" href="#">join now</a>
