--- a/index.html
+++ b/index.html
@@ -20,12 +20,69 @@
       <p class="card-info">full flexibility and access to all our courses!</p>
       <p class="price">$20</p>
       <p class="price-info">
-        recuring payment on monthly basis - cancel anytime!
+        Recuring Payment on Monthly basis - cancel anytime!
       </p>
-      <div class="details-container">
-        <div class="details">40 course</div>
-        <div class="details">download resource</div>
-        <div class="details">certification of complete</div>
+      <div class="sub-details">
+        <div class="sub-feature">
+          <div class="icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-6"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4"
+              />
+            </svg>
+          </div>
+          <p class="sub-feature-text">40 course</p>
+        </div>
+        <div class="sub-feature">
+          <div class="icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-5 w-5"
+              viewBox="0 0 20 20"
+              fill="currentColor"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z"
+                clip-rule="evenodd"
+              />
+            </svg>
+          </div>
+          <p class="sub-feature-text">download resource</p>
+        </div>
+        <div class="sub-feature">
+          <div class="icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-6"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M3 9a2 2 0 012-2h.93a2 2 0 001.664-.89l.812-1.22A2 2 0 0110.07 4h3.86a2 2 0 011.664.89l.812 1.22A2 2 0 0018.07 7H19a2 2 0 012 2v9a2 2 0 01-2 2H5a2 2 0 01-2-2V9z"
+              />
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M15 13a3 3 0 11-6 0 3 3 0 016 0z"
+              />
+            </svg>
+          </div>
+          <p class="sub-feature-text">certification of complete</p>
+        </div>
       </div>
       <div class="button-container">
         <a class="button" href="#">join now</a>
